Add exec-maven-plugin to lphybeast-ssm for mvn exec:exec support